@@ -27,8 +27,8 @@ public class PreviewLabel extends JLabel {
         super.paintComponent(g);
         if (bufferedImage != null) {
             Dimension aspectRatioMaintainedDim = GraphicsUtil.getScaledDimension(new Dimension(bufferedImage.getWidth(), bufferedImage.getHeight()), new Dimension(getWidth(), getHeight()));
-            int width = new Double(aspectRatioMaintainedDim.getWidth()).intValue();
-            int height = new Double(aspectRatioMaintainedDim.getHeight()).intValue();
+            int width = Double.valueOf(aspectRatioMaintainedDim.getWidth()).intValue();
+            int height = Double.valueOf(aspectRatioMaintainedDim.getHeight()).intValue();
             g.drawImage(new ImageIcon(GraphicsUtil.getScaledImage(bufferedImage, width, height)).getImage(), 0, 0, width, height, this);
         }
     }
